two parameter converter restructured